[gd_scene load_steps=6 format=3 uid="uid://b0i35ti8lotym"]

[ext_resource type="Script" uid="uid://dyo7eg54fk7lu" path="res://Scripts/Enemies/Spike_script.gd" id="1_fkl1r"]
[ext_resource type="Texture2D" uid="uid://cjprrud6xuw45" path="res://Assets/Img/Enemies/meteor3c.png" id="2_hlg3y"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mx80v"]
radius = 27.3884
height = 65.2723

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_g4e5y"]
radius = 21.3611
height = 53.8072

[sub_resource type="SpriteFrames" id="SpriteFrames_xoe2v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_hlg3y")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Spike" type="CharacterBody2D" groups=["Enemy", "spike"]]
collision_layer = 5
collision_mask = 6
motion_mode = 1
script = ExtResource("1_fkl1r")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
rotation = -1.06465
scale = Vector2(1.1, 1.1)
shape = SubResource("CapsuleShape2D_mx80v")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = -1.06465
scale = Vector2(1.1, 1.1)
shape = SubResource("CapsuleShape2D_g4e5y")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 2
sprite_frames = SubResource("SpriteFrames_xoe2v")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
